bug/correction-spacing

--- a/src/public/css/Smartphone.css
+++ b/src/public/css/Smartphone.css
@@ -39,7 +39,7 @@
      * ABOUT ME
     */
     .container__description {
-        padding: 3rem;
+        padding: 2rem;
     }
 
     /**
